...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/brown">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_item_back_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
...
            android:text="Add Item"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_item_confirm_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
...
                android:paddingBottom="16dp"
                android:text="@string/defaultError"
                android:textColor="@color/red"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_description_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Brief Description"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_date_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date Acquired"
                app:endIconDrawable="@drawable/baseline_calendar_month_24"
                app:endIconMode="custom"
                app:endIconTint="@color/brown"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_cost_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Estimated Value"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
...

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/add_photo_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

            <Space
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Make"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_make"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="70" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
...

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:hint="Serial Number"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_item_serial_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_item_scan_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:icon="@drawable/baseline_barcode_scanner_24"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Comment"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="280" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
...
