<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/baseline_home_24"
        tools:ignore="MenuTitle"
        />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/baseline_add_24"
        tools:ignore="MenuTitle"
        />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/baseline_person_24"
        tools:ignore="MenuTitle"
        />

</menu>
