<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/brown"
    android:orientation="vertical"
    android:paddingVertical="4dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/serialNum_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:text=" Scan Serial Number"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:icon="@drawable/serial_number"
        android:textSize="18sp"
        app:iconGravity="textStart"
        app:iconTint="@color/white" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="4dp"
        app:dividerColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/barcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:text=" Scan Barcode"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:icon="@drawable/barcode"
        app:iconGravity="textStart"
        android:textSize="18sp"
        app:iconTint="@color/white" />

</LinearLayout>
