<com.google.android.material.imageview.ShapeableImageView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:shapeAppearanceOverlay="@style/smallRoundedImageView"
    android:id="@+id/gallery_image_view"
    android:layout_width="78dp"
    android:layout_height="78dp"
    android:scaleType="centerCrop"
    android:layout_marginBottom="10dp" />
