<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <include layout="@layout/gallery_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp" />

    <ImageView
        android:id="@+id/delete_photo_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Delete Photo"
        android:src="@drawable/delete_button" />
</RelativeLayout>
