...
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="4dp"
        app:dividerColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:textSize="18sp"
        android:text="Select from gallery"
        android:textAlignment="textStart"
...
